# internal/models/doc-category/doc_category.go
@@ -1,12 +1,17 @@
 package doc_category
 
-import "time"
+import (
+	enum "go-api/internal/enums"
+	"time"
+)
 
 type DocCategory struct {
 	ID          string `gorm:"type:uuid;default:uuid_generate_v4();primaryKey"`
 	Name        string `gorm:"not null;uniqueIndex"`
 	Description string
-	Documents   []Document `gorm:"foreignKey:CategoryID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:RESTRICT;"`
-	CreatedAt   time.Time  `gorm:"autoCreateTime"`
-	UpdatedAt   time.Time  `gorm:"autoUpdateTime"`
+	Status      enum.RecordStatus `gorm:"type:varchar(20);default:'active';not null"`
+
+	Documents []Document `gorm:"foreignKey:CategoryID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:RESTRICT;"`
+	CreatedAt time.Time  `gorm:"autoCreateTime"`
+	UpdatedAt time.Time  `gorm:"autoUpdateTime"`
 }
